# drf-playground

./: .gitignore  README.md  pyproject.toml
apiv1/: serializers.py  urls.py  views.py
config/: constants.py  local.base.py  settings.py  urls.py
django_playground/django_playground/: settings.py
shop/: admin.py  models.py
shop/migrations/: 0001_initial.py  0002_auto_20221026_2253.py
templates/: index.html
