[tool.poetry]
name = "django-playground"
version = "0.1.0"
description = ""
authors = ["Kosuke Saigusa <saigusa758cloudy@gmail.com>"]
readme = "README.md"
packages = [{include = "django_playground"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
