[tool.poetry]
name = "drf-playground"
version = "0.1.0"
description = ""
authors = ["Kosuke Saigusa <saigusa758cloudy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2.15"
djangorestframework = "^3.14.0"
djoser = "^2.1.0"
djangorestframework-simplejwt = "<5.0.0"
django-cors-headers = "^3.13.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
